[package]
name = "vangers-srv"
version = "0.1.0"
authors = ["Vitaliy Busko <vitaliy.opensource@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
tokio = { version = "1.38", features = ["full"] }
enum-primitive-derive = "0.3"
num-traits = "0.2"
encoding = "0.2"
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"