[package]
name = "vangers-srv"
version = "0.2.0"
authors = ["Vitaliy Busko <vitaliy.opensource@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
tokio = { version = "=1.47", features = ["full"] }
enum-primitive-derive = "0.3"
num-traits = "0.2"
encoding = "0.2"
clap = { version = "4.4", features = ["derive", "env"] }
thiserror = "1"
tracing = "0.1.43"
strum = { version = "0.27.2", features = [ "derive" ] }
tracing-subscriber = { version = "0.3.22", features = [ "env-filter" ] }
